--- a/node_app/package.json
+++ b/node_app/package.json
@@ -7,5 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "musaeada_team",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "node-env-file": "^0.1.8"
+  }
 }
