--- a/android/Musaeda/app/build.gradle
+++ b/android/Musaeda/app/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.neenbedankt.android-apt'
+apply plugin: 'me.tatarka.retrolambda'
 
 android {
   compileSdkVersion 25
@@ -27,4 +29,20 @@ dependencies {
   compile 'com.android.support:appcompat-v7:25.3.0'
   compile 'com.android.support.constraint:constraint-layout:1.0.2'
   testCompile 'junit:junit:4.12'
+
+  compile 'com.squareup.retrofit2:retrofit:2.1.0'
+  compile 'com.squareup.retrofit2:converter-gson:2.0.1'
+  compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
+  compile 'com.squareup.okhttp3:okhttp:3.2.0'
+  compile 'io.reactivex:rxjava:1.1.9'
+  compile 'io.reactivex:rxandroid:1.1.0'
+  compile 'com.jakewharton:butterknife:8.4.0'
+  apt 'com.jakewharton:butterknife-compiler:8.4.0'
+  compile 'com.yahoo.squidb:squidb:2.0.2'
+  compile 'com.yahoo.squidb:squidb-annotations:2.0.2'
+  apt 'com.yahoo.squidb:squidb-processor:2.0.2'
+  compile 'com.google.dagger:dagger:2.0.2'
+  apt "com.google.dagger:dagger-compiler:2.0.2"
+  compile "com.soundcloud.lightcycle:lightcycle-lib:1.6.1"
+  apt "com.soundcloud.lightcycle:lightcycle-processor:1.6.1"
 }
