--- a/node_app/package.json
+++ b/node_app/package.json
@@ -9,6 +9,7 @@
   "author": "musaeada_team",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.17.1",
     "node-env-file": "^0.1.8",
     "twilio": "^2.11.1"
   }
