--- a/android/Musaeda/app/src/main/AndroidManifest.xml
+++ b/android/Musaeda/app/src/main/AndroidManifest.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="com.musaeda">
+    package="com.musaeda">
 
     <uses-permission android:name="android.permission.READ_CONTACTS"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
-      android:name=".presentation.MusaedaApplication"
-      android:allowBackup="true"
-      android:icon="@mipmap/ic_launcher"
-      android:label="@string/app_name"
-      android:supportsRtl="true"
-      android:theme="@style/AppTheme">
-
+        android:name=".presentation.MusaedaApplication"
+        android:allowBackup="true"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
+        android:supportsRtl="true"
+        android:theme="@style/AppTheme">
         <activity android:name=".presentation.view.home.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -20,6 +20,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".presentation.view.contactpicker.ContactsPickerActivity">
+        </activity>
+        <activity android:name=".SMSSendingActivity">
         </activity>
     </application>
 
