--- a/android/Musaeda/app/src/main/AndroidManifest.xml
+++ b/android/Musaeda/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
 
     <uses-permission android:name="android.permission.READ_CONTACTS"/>
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.SEND_SMS" />
+
 
     <application
         android:name=".presentation.MusaedaApplication"
