--- a/android/Musaeda/app/src/main/AndroidManifest.xml
+++ b/android/Musaeda/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
         </activity>
         <activity android:name=".presentation.view.home.MainActivity">
         </activity>
-        <activity android:name=".SMSSendingActivity">
+        <activity android:name=".ComposeMessageActivity">
         </activity>
     </application>
 
