--- a/node_app/package.json
+++ b/node_app/package.json
@@ -4,12 +4,20 @@
   "description": "service for primitive social network over sms",
   "main": "app.js",
   "scripts": {
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "musaeada_team",
   "license": "MIT",
+  "engines": {
+    "node": ">=4.0.0"
+  },
   "dependencies": {
     "body-parser": "^1.17.1",
+    "assert": "^1.4.1",
+    "express": "^4.14.1",
+    "node-env-file": "^0.1.8",
+    "mongodb": "^2.2.24",
     "node-env-file": "^0.1.8",
     "twilio": "^2.11.1"
   }
